Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-52796

QLineEdit fails to override MoveToStartOfLine shortcuts

    XMLWordPrintable

Details

    • 15a76e571926b94de74caa536975327949a14fd7

    Description

      I have application-wide shortcuts defined for "Qt::CTRL + Qt::Key_Left" and "Qt::CTRL + Qt::Key_Right". On OS X, this means command-left and command-right.

      When a QLineEdit has focus: command-left triggers the shortcut, while command-right triggers the QLineEdit's behaviour of moving to the end of the line. Command-left should move the cursor to the start of the line.

      This problem is due to a bug in QWidgetLineControl::processShortcutOverrideEvent. QKeySequence::MoveToStartOfLine is accidentally omitted from the list. MoveToEndOfLine is there, but MoveToStartOfLine is conspicuously absent.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            peppe Giuseppe D'Angelo
            branewave Paul Sturm
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes